# mdprep

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md  developer_notes.md  installation.md  ligands.md  manifest_reference.md  protonation.md  qmmesp_pyscf.md  quickstart.md  tleap_and_validation.md  troubleshooting.md
examples/: 01_protein_only_ff19sb.yaml  02_manual_catalytic_protonation.yaml  03_multi_ligand_am1bcc.yaml  04_qmmesp_pyscf_ligand.yaml  05_histidine_gxtb_sp.yaml  06_disulfide_manual.yaml  07_gas_resp_pyscf_ligand.yaml  README.md
examples/tutorials/minimal_user_mol2/: README.md  system.yaml
scripts/: run_smoke_tests.sh
src/mdprep/: __init__.py  cli.py
src/mdprep/ambertools/: __init__.py  antechamber.py  commands.py  mol2.py  parmchk2.py
src/mdprep/charges/: __init__.py  esp_grid.py  resp_fit.py
src/mdprep/config/: __init__.py  loader.py  models.py
src/mdprep/leap/: __init__.py  builder.py  forcefields.py  ions.py  log_parser.py  report.py  residues.py  runner.py
src/mdprep/ligands/: __init__.py  extract.py  identity.py  pyscf_charges.py  report.py  workflow.py
src/mdprep/protonation/: __init__.py  apply.py  disulfide_states.py  histidine_geometry.py  histidine_xtb.py  overrides.py  pka_rules.py  propka.py  propka_parser.py  report.py  states.py  xtb_parser.py  xtb_runner.py
src/mdprep/qm/: __init__.py  point_charges.py  pyscf_esp.py  pyscf_runner.py
src/mdprep/reports/: __init__.py  structure_report.py
src/mdprep/structure/: __init__.py  classify.py  disulfides.py  inspect.py  models.py  normalize.py  pdb.py  selectors.py  writer.py
src/mdprep/validation/: __init__.py  openmm_check.py  parmed_check.py  topology.py
src/mdprep/workflows/: __init__.py  init.py  inspect.py  prepare.py  selftest.py  validate.py
tests/: test_altloc.py  test_ambertools_commands.py  test_classify.py  test_cli.py  test_config_examples.py  test_config_validation.py  test_disulfide_assignment.py  test_disulfide_leap_mapping.py  test_disulfides.py  test_esp_grid.py  test_external_ambertools.py  test_external_propka_xtb.py  test_external_pyscf.py  test_external_tleap.py  test_histidine_geometry.py  test_import.py  test_init_cli.py  test_init_ligand_placeholders.py  test_inspect_cli.py  test_ions.py  test_leap_builder.py  test_leap_forcefields.py  test_leap_input_pdb.py  test_leap_log_parser.py  test_ligand_extraction.py  test_ligand_workflow_mocked.py  test_manual_protonation.py  test_mol2_parser.py  test_mol2_validation.py  test_no_openbabel.py  test_packaging_metadata.py  test_pdb_parser.py  test_pdb_writer.py  test_pka_rules.py  test_point_charges.py  test_prepare_ligands_stage.py  test_prepare_protonation_stage.py  test_prepare_pyscf_ligands_stage.py  test_prepare_structure_stage.py  test_prepare_tleap_stage.py  (+18 more)
tests/data/: propka_sample.pka  xtb_hid_stdout.txt  xtb_hie_stdout.txt
tests/data/ligands/: ligand_cof.good.mol2  ligand_sub.atom_count_mismatch.mol2  ligand_sub.bad_charge.mol2  ligand_sub.good.mol2  ligand_sub.renamed.mol2  ligand_sub.shifted_coords.mol2  ligand_sub.small_residual.mol2
