[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mdprep"
version = "0.1.0"
description = "Reproducible Amber MD preparation workflow manager for proteins and independent ligands."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Miquel Estévez Gay" }
]
keywords = ["amber", "molecular-dynamics", "protein", "ligand", "resp", "qmmm", "pyscf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pyyaml>=6",
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
dev = [
  "pytest>=8",
  "build>=1",
  "twine>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]
docs = [
  "mkdocs>=1.6",
]

[project.urls]
Homepage = "https://github.com/miqueleg/mdprep"
Issues = "https://github.com/miqueleg/mdprep/issues"

[project.scripts]
mdprep = "mdprep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mdprep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "external: tests requiring optional external executables",
  "ambertools: tests requiring optional AmberTools executables",
  "tleap: tests requiring optional tleap executable",
  "openmm: tests requiring optional OpenMM package",
  "parmed: tests requiring optional ParmEd package",
  "pyscf: tests requiring optional PySCF package",
  "qmmesp: tests requiring optional QMMESP-style integration dependencies",
  "propka: tests requiring optional PropKa executable",
  "xtb: tests requiring optional xTB executable",
  "slow: slow tests excluded from quick CI runs",
]
